--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/lato": "^4.5.10",
     "@startapp/mobx-utils": "^1.1.564817228",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "chakra-ui-autocomplete": "^1.4.5",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -45,6 +47,6 @@
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
+    "vite": "^3.2.4"
   }
 }
