--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mobx-react-lite": "^3.4.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.6.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
