--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview",
     "code-check": "yarn eslint ./src && yarn tsc"
   },
+  "proxy": "http://localhost:3000"
+  ,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.4.1",
@@ -43,7 +45,8 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "styled-components": "^5.3.6",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "use-image-color": "^0.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
